# FaceTimeOS

./: .env  README.md  run.sh
Agent-S/: pyproject.toml  run_claude.sh  run_demo_best.sh  run_demo_fast.sh  run_grok.sh  run_groq.sh  run_openai.sh  run_ui_tars.sh
Agent-S/gui_agents/s3/: action_analysis_agent.py  app.py
Agent-S/src/: call_integration.py
Agent-S/src/s3/: action_analysis_agent.py  app.py  test_action_analysis_agent.py
Agent-S/src/s3/agents/: code_agent.py  grounding.py  worker.py
Agent-S/src/s3/memory/: procedural_memory.py
Agent-S/src/s3/utils/: common_utils.py
backend/: audio.py  call.py  imessage_bridge.py  main.py  pyproject.toml  test_agent_s.py
backend/audio/: cli.py  fish_client.py  main.py  pyproject.toml
backend/audio/tests/: audio1.m4a  conftest.py  test_main.py
frontend/: README.md  package-lock.json  package.json
frontend/electron/: ApiServerHelper.ts  LLMHelper.ts  ProcessingHelper.ts  ipcHandlers.ts  preload.ts
frontend/src/: App.tsx  index.css
frontend/src/_pages/: Queue.tsx  Solutions.tsx
frontend/src/components/Queue/: QueueCommands.tsx
frontend/src/types/: electron.d.ts
