[project]
name = "audio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fish-audio-sdk>=2025.6.3",
    "flask>=3.1.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.3",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
